Viewport artifacts after adding or moving objects #54279

Closed
opened 2018-03-09 17:26:02 +01:00 by Sergey Sharybin · 6 comments

System Information

Linux 64bit, GTX1080

Blender Version

Broken: Current master, starting with 7377d411b4.
Worked: All previous versions

Short description of error

With viewport render, adding object or moving it makes volume to render wrong. Affects both CPU and GPU.

Exact steps for others to reproduce the error

Download archive, unpack, start viewport render. Then Shift-A -> Mesh -> Plane. BOOM! Volume is blocky and black.

volume_buggy_viewport.tar.bz2

**System Information** Linux 64bit, GTX1080 **Blender Version** Broken: Current master, starting with 7377d411b4. Worked: All previous versions **Short description of error** With viewport render, adding object or moving it makes volume to render wrong. Affects both CPU and GPU. **Exact steps for others to reproduce the error** Download archive, unpack, start viewport render. Then Shift-A -> Mesh -> Plane. BOOM! Volume is blocky and black. [volume_buggy_viewport.tar.bz2](https://archive.blender.org/developer/F2432571/volume_buggy_viewport.tar.bz2)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Brecht Van Lommel was assigned by Sergey Sharybin 2018-03-09 17:27:03 +01:00
Author
Owner

Added subscribers: @kevindietrich, @brecht

Added subscribers: @kevindietrich, @brecht
Author
Owner

@brecht, @kevindietrich: who will be faster fixing this?

P.S. Can you also fix indentation, it is really not that difficult to check on it and keep consistent.

@brecht, @kevindietrich: who will be faster fixing this? P.S. Can you also fix indentation, it is really not that difficult to check on it and keep consistent.

This issue was referenced by blender/cycles@bf1f3d95ad

This issue was referenced by blender/cycles@bf1f3d95ad0e02550ada3357b2d40960ee766d58

This issue was referenced by 1f5c5fa189

This issue was referenced by 1f5c5fa189db8d5d505246dc7e905a796d21ce22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54279
No description provided.