Fix T54279: viewport update bug with volume meshes.

Meshes without vertex normals were not handled correctly.